fix wrong question at the end of test index overflow bug

--- a/FileManagers/.sources/styles.css
+++ b/FileManagers/.sources/styles.css
@@ -9,8 +9,9 @@
 
 a {
     text-decoration: none;
-    color: tomato;
+    color: dodgerblue;
     text-decoration: underline;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
     a:hover {
@@ -18,10 +19,15 @@ a {
         color: rgb(195, 60, 45);
     }
 
+lu {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 mark {
     text-decoration: none;
     background: none;
-    color: tomato;
+    color: rgb(10, 10, 10);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #good-btn {
