--- a/QuizLogicalComponentsTests/.sources/styles.css
+++ b/QuizLogicalComponentsTests/.sources/styles.css
@@ -49,5 +49,5 @@ mark {
 }
 
 .heading_section_contents {
-    color: gray;
+    color: rgb(10, 10, 10);
 }
